--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>SnowballSocial</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="snowballsocial"/>
+  <meta name="title" content="Snowball socail"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="main-content">
