--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
   <meta name="description" content="snowballsocial"/>
   <meta name="title" content="Snowball socail"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body class="main-content">
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
